--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,14 +1,49 @@
+  #name{
+    position: relative;
+    margin:auto;
+  }
+  
+  h1{
+    text-align: center;
+  }
+  
+  #twiit{
+    position: relative;
+    bottom: 110px;
+    left: 500px;
+    height: 100px;
+    width: 100px;
+  }
+  #pimg {
+    border-radius: 100%;
+    box-shadow: 1px 1px 1px;
+  }
+
+  #timg {
+      border-radius: 100%;
+      box-shadow: 1px 1px 1px;
+    }
+
 
   body {
       
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background: radial-gradient(darkblue, lightblue);
+    background: -webkit-radial-gradient( darkblue, lightblue);
   }
 
   main {
     flex: 1 0 auto;
   }
-    
-Add Comment Collapse
 
+  .card{
+    background: radial-gradient(white, white);
+    background: -webkit-radial-gradient( white, white );
+  }
+  
+  #username{
+    color: gray;
+  }
+  
