--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,7 +65,7 @@
           </div>
       <div class="col xs6 s6 m6 l6 xl6">
         <div class="card vertical"  alt="Youtube">
-            <p>Enter your favorite Youtuber user here: <input type="text" id="userinput" /></p>
+            <p>Enter Facebook user here: <input type="text" id="userinput" /></p>
             <button onclick={getDataFromYoutube()}>submit</button>
             
             </div>
@@ -90,7 +90,7 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">https://www.youtube.com/</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">https://www.facebook.com/</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">https://twitter.com/</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">https://www.spotify.com/us/</a></li>
                   <li><a class="grey-text text-lighten-3" href="#!">https://newsapi.org/</a></li>
